--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^5.16.2"
+		"@prisma/client": "^5.16.2",
+		"chart.js": "^4.4.3",
+		"svelte-chartjs": "^3.1.5"
 	}
 }
