--- a/package.json
+++ b/package.json
@@ -9,37 +9,38 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"preinstall": "npx only-allow pnpm"
 	},
 	"prisma": {
 		"seed": "npx ts-node prisma/seed.ts"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^8.56.7",
+		"@sveltejs/adapter-auto": "^3.2.2",
+		"@sveltejs/kit": "^2.5.18",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@types/eslint": "^8.56.11",
 		"autoprefixer": "^10.4.19",
-		"daisyui": "^4.12.2",
-		"eslint": "^9.0.0",
+		"daisyui": "^4.12.10",
+		"eslint": "^9.8.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"postcss": "^8.4.38",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"prisma": "^5.16.2",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.4.4",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0-alpha.20",
-		"vite": "^5.0.3"
+		"eslint-plugin-svelte": "^2.43.0",
+		"globals": "^15.8.0",
+		"postcss": "^8.4.40",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.6",
+		"prisma": "^5.17.0",
+		"svelte": "^4.2.18",
+		"svelte-check": "^3.8.4",
+		"tailwindcss": "^3.4.7",
+		"tslib": "^2.6.3",
+		"typescript": "^5.5.4",
+		"typescript-eslint": "8.0.0-alpha.54",
+		"vite": "^5.3.5"
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^5.16.2",
+		"@prisma/client": "^5.17.0",
 		"chart.js": "^4.4.3",
 		"svelte-chartjs": "^3.1.5"
 	}
